<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backArrowImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_back"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/profileTitleTextView"
                    style="@style/font_size_16_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_my_profile"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/accountTitleTextView"
            style="@style/font_size_18_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_account"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/usernameLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/accountTitleTextView"
            app:layout_constraintTop_toBottomOf="@id/accountTitleTextView">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_user_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_size_12_medium"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="@+id/userImageView"
                app:layout_constraintStart_toEndOf="@id/userImageView"
                app:layout_constraintTop_toTopOf="@+id/userImageView"
                android:text="Amera Ben Amer #403" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/editUsernameImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myAccountsLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/usernameLayout"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/myAccountsImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_user_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/myAccountsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_size_12_medium"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="@+id/myAccountsImageView"
                app:layout_constraintStart_toEndOf="@id/myAccountsImageView"
                app:layout_constraintTop_toTopOf="@+id/myAccountsImageView"
                android:text="My Accounts" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/myAccountsDetailsImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingTitleTextView"
            style="@style/font_size_18_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_setting"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/myAccountsLayout"
            app:layout_constraintTop_toBottomOf="@id/myAccountsLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/languageLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/settingTitleTextView"
            app:layout_constraintTop_toBottomOf="@id/settingTitleTextView">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/languageImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrawImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/languageTextView"
                style="@style/font_size_12_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/language"
                app:layout_constraintBottom_toTopOf="@+id/selectedLanguageTextView"
                app:layout_constraintStart_toEndOf="@+id/languageImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectedLanguageTextView"
                style="@style/font_size_10_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="English"
                android:textColor="@color/gray_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/languageImageView"
                app:layout_constraintTop_toBottomOf="@+id/languageTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menuLanguagesSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/gray_200"
                android:visibility="gone"

                app:endIconMode="dropdown_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/textViewLanguage"
                    style="@style/font_size_12_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_200"
                    android:inputType="none"
                    android:text="English" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notificationLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/languageLayout"
            app:layout_constraintTop_toBottomOf="@id/languageLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/notificationImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/notificationTextView"
                android:layout_width="wrap_content"
                style="@style/font_size_12_medium"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="@+id/notificationImageView"
                app:layout_constraintStart_toEndOf="@id/notificationImageView"
                app:layout_constraintTop_toTopOf="@+id/notificationImageView"
                android:text="@string/lbl_notification" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchedNotificationOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:trackTintMode="src_atop" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/darkModeLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/notificationLayout"
            app:layout_constraintTop_toBottomOf="@id/notificationLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/darkModeImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_night_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/darkModeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_size_12_medium"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="@+id/darkModeImageView"
                app:layout_constraintStart_toEndOf="@id/darkModeImageView"
                app:layout_constraintTop_toTopOf="@+id/darkModeImageView"
                android:text="@string/lbl_dark_mode" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchedDarkModeOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:trackTintMode="src_atop" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutUsLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/darkModeLayout"
            app:layout_constraintTop_toBottomOf="@id/darkModeLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aboutUsImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_information_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/aboutUsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                style="@style/font_size_12_medium"
                app:layout_constraintBottom_toBottomOf="@+id/aboutUsImageView"
                app:layout_constraintStart_toEndOf="@id/aboutUsImageView"
                app:layout_constraintTop_toTopOf="@+id/aboutUsImageView"
                android:text="@string/lbl_about_us" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

<!--    app:thumbTint="@color/green_500"
                app:trackTint="@color/green_50"-->